--- a/src/Components/rowTile/rowTile.css
+++ b/src/Components/rowTile/rowTile.css
@@ -20,3 +20,9 @@ overflow-y: hidden;
 .poster::-webkit-scrollbar{
     display: none;
 }
+
+.small{
+    max-height: 150px;
+   
+    padding: 10px;
+}
